# navigation

./: .gitlab-ci.yml  README.md  requirements.txt  sonar-project.properties
kloam-loc/: CMakeLists.txt
kloam-loc/config/: params_sw_loc.yaml  params_sw_loc_realtime.yaml  params_sw_mapping.yaml  params_sw_mapping_realtime.yaml
kloam-loc/include/: utility.h
kloam-loc/launch/: 2d_3d_calib_by_hand.launch  loc_sw.launch  mapping_sw.launch  realtime_loc_sw.launch  realtime_mapping_sw.launch
kloam-loc/launch/include/: module_navsat.launch  robot.urdf.xacro
kloam-loc/launch/include/rviz/: calib.rviz  rviz.rviz
kloam-loc/matlab/: countPoints.m  countPoints.m~  occupiedGridGeneration.m
kloam-loc/matlab/MISC/: Copy_of_ptcloud2map2d.m  data_read.m  kloam_pose.m  occupiedGridGeneration.asv  occupiedGridGeneration.m  odom_publisher_new_11_09_21.py  pcTest.pcd  ptcloud2map2d.asv  ptcloud2map2d.m  ptcloud2map2d_height.m  ptcloud2map2d_std.m
kloam-loc/scripts/: nclt_data2bag_BIN_TODO.py  nclt_data2bag_SYNC.py  pub_odom.py  rec_control.py  test.py
kloam-loc/src/: lidarOdometry.cpp  mapOptmization.cpp  mapOptmizationGT.cpp  mapOptmizationOPTperFrame.cpp  mapOptmizationSLAM_TODO.cpp  mapOptmizationSurfOnly.cpp  mapOptmizationSurfOnlyCRASH.cpp  scanRegistration.cpp
kloam-loc/srv/: save_map.srv
my_navigation/: CMakeLists.txt  package.xml
my_navigation/config/: costmap_common_params.yaml  costmap_converter_params.yaml  dwa_local_planner_params.yaml  finalvel.launch  global_costmap_params.yaml  gmapping.launch  keyboard_teleop.launch  local_costmap_params.yaml  teb_local_planner_params.yaml
my_navigation/launch/: move_base.launch
my_navigation/maps/: office2.yaml
my_navigation/maps/MISC/: IMR2nd.pgm  IMR2nd.yaml  imr2floor_20211005.yaml  office.yaml
my_navigation/rviz/: move-base-navi.rviz
my_navigation/urdf/: myRobot.xacro  robot.urdf.xacro  robot.urdf_OLD.xacro
navigation/costmap_2d/plugins/: obstacle_layer.cpp  voxel_layer.cpp
obstacle_detector/: CMakeLists.txt
obstacle_detector/include/obstacle_detector/: obstacle_extractor.h
obstacle_detector/launch/: merge.launch  nodes.launch  nodes1.launch  nodes_tra.launch  nodesback.launch
obstacle_detector/src/: obstacle_extractor.cpp  obstacle_extractorback.cpp  scans_merger.cpp
obstacle_detector/src/nodes/: obstacle_extractor_nodeback.cpp  obstacle_publisher_nodeback.cpp  obstacle_tracker_nodeback.cpp  scans_merger_node.cpp
path_pursuit/: CMakeLists.txt  package.xml
path_pursuit/include/path_pursuit/: path_pursuit.h
path_pursuit/launch/: avoid_bringup.launch  path_pursuit.launch  path_pursuit_3d.launch  path_record.launch  path_record_3d.launch
path_pursuit/src/: avoidance.cpp  path_pursuit.cpp  path_record.cpp
route_planner/: CMakeLists.txt  package.xml
route_planner/include/route_planner/: Astar.h  KDTree.hpp
route_planner/launch/: route_planner_pursuiter.launch
route_planner/src/: AStar.cpp  KDTree.cpp  route_node.cpp
